Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-1104

reactor hangs on reconnect

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Blocker
    • Resolution: Fixed
    • proton-0.10, proton-0.11.1
    • proton-0.12.0
    • proton-c
    • None

    Description

      When the reactor's connection fails (or shuts down cleanly), and a new connection is created on that reactor (reconnect), pn_reactor_wakeup() no longers works properly:

      pn_reactor_wakeup: : Bad file descriptor

      Attachments

        1. testcase.c
          4 kB
          Ken Giusti

        Activity

          People

            kgiusti Ken Giusti
            kgiusti Ken Giusti
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: