PROTON-1104: Delay releasing timer and IPC pipes until pn_reactor_stop()